--- a/index.html
+++ b/index.html
@@ -1,21 +1,56 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-      <meta charset="UTF-8"
-      <title>I am the Edgelord</title>
+      <meta charset="UTF-8">
+      <title>I am the Edge Lord</title>
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
-            <div class="logo"><img src="images/edge-lord-crop.png"></div>
+            <div class="logo"><img src="images/edge-lord-crop.png" alt="Edgy Logo"></div>
             <a href="https://www.pornhub.com">Header Link One</a>
             <a href="https://www.xhamster.com">Header Link Two</a>
             <a href="https://www.motherless.com">Header Link Three</a>
         </div>
-
-
-
-
+        <div class="top">
+            <div id="topcap">I am the Edge Lord</div>
+            <p>Behold, as I show you how edgy one human being can be. 
+               Sign up now for the edgiest content on the internet.</p>
+            <button class="sign-up">Sign up</button>
+            <div id="placeholder"><img src="images/skull.jpg" alt="Left facing skull"></div>
+        </div>
+        <div class="mid1">
+            <div class="header2">Find the edgiest memes</div>
+                <div class="memes">
+                    <div class="photoset">
+                        <img src="images/neverunderstand.png" alt="TEH EDGE">
+                           <div class="caption">we only have the edgiest of the edgy memes ever seen in one place</div>
+                    </div>       
+                    <div class="photoset">       
+                        <img src="images/jokertattoo.png" alt="Cringe Joker Tattoo">
+                            <div class="caption">the edgiest collection of tattoos ever seen on the internet</div>
+                    </div> 
+                    <div class="photoset">       
+                        <img src="images/furry.png" alt="Edgy furry being edgy a f">
+                            <div class="caption">other edge lords from all walks of life will appear before you</div>
+                    </div>
+                    <div class="photoset">        
+                        <img src="images/swordedge.png" alt="Weeaboo with anime pillow and blade">
+                            <div class="caption">only the edgiest of edge lords use and study the blade</div>    
+                    </div>    
+                </div>
+        </div>
+        <div class="quote-section">
+            <div class="quote">To be edgy is to be on the brink of your sanity, to know that the 
+                slightest mistake by the surrounding sheep would cause a catastrophe for everyone around me.
+            </div>
+                <div class="author">-Anon, of the 4chan realm</div>
+        </div>
+        <div class="bottom-section">
+            <div class="persuade">It's time to join the Edge Lords</div>
+            <div class="hook">Sign up for the Land of Edge by clicking this button. Right now. Do it.</div>
+            <button class="Sign up">Sign up</button>
+        </div>
 
         <div class="footer"></div>
     </body>
