--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <body>
         <div class="header">
             <div class="logo"><img src="images/edge-lord-crop.png" alt="Edgy Logo"></div>
-            <a href="https://www.pornhub.com">Header Link One</a>
-            <a href="https://www.xhamster.com">Header Link Two</a>
-            <a href="https://www.motherless.com">Header Link Three</a>
+              <div class="links">  
+                <a href="https://www.pornhub.com">Header Link One</a>
+                <a href="https://www.xhamster.com">Header Link Two</a>
+                <a href="https://www.motherless.com">Header Link Three</a>
+              </div>  
         </div>
         <div class="top">
-            <div id="topcap">I am the Edge Lord</div>
-            <p>Behold, as I show you how edgy one human being can be. 
-               Sign up now for the edgiest content on the internet.</p>
-            <button class="sign-up">Sign up</button>
-            <div id="placeholder"><img src="images/skull.jpg" alt="Left facing skull"></div>
+            <div class="leftcolumn">
+               <div class="maintext">I am the Edge Lord</div>
+               <div class="secondarytext"> Behold, as I show you how edgy one human being can be. 
+               Sign up now for the edgiest content on the internet. </div>
+
+               <button class="sign-up">Sign up</button>
+            </div>    
+            <div class="placeholder"><img src="images/skull.jpg" alt="Left facing skull"></div>
         </div>
         <div class="mid1">
             <div class="header2">Find the edgiest memes</div>
