top section of webpage finished

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         </div>
         <div class="top">
             <div class="leftcolumn">
-               <div class="maintext">I am the Edge Lord</div>
-               <div class="secondarytext"> Behold, as I show you how edgy one human being can be. 
-               Sign up now for the edgiest content on the internet. </div>
-
-               <button class="sign-up">Sign up</button>
+                <div class="textbox">
+                    <div class="maintext">I am the Edge Lord</div>
+                    <div class="secondarytext"> Behold, as I show you how edgy one human being can be. 
+                    Sign up now for the edgiest content on the internet. </div>
+                </div>    
+                <button class="sign-up">Sign up</button>
             </div>    
             <div class="placeholder"><img src="images/skull.jpg" alt="Left facing skull"></div>
         </div>
