finished section with multiple images

--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                 </div>    
                 <button class="sign-up">Sign up</button>
             </div>    
-            <div class="placeholder"><img src="images/skull.jpg" alt="Left facing skull"></div>
+            <img id="placeholder" src="images/skull.jpg" alt="Left facing skull"></div>
         </div>
         <div class="mid1">
             <div class="header2">Find the edgiest memes</div>
                 <div class="memes">
                     <div class="photoset">
-                        <img src="images/neverunderstand.png" alt="TEH EDGE">
+                         <img id="photo1" src="images/neverunderstand.png" alt="TEH EDGE">
                            <div class="caption">we only have the edgiest of the edgy memes ever seen in one place</div>
                     </div>       
                     <div class="photoset">       
-                        <img src="images/jokertattoo.png" alt="Cringe Joker Tattoo">
+                        <img id="photo2" src="images/jokertattoo.png" alt="Cringe Joker Tattoo">
                             <div class="caption">the edgiest collection of tattoos ever seen on the internet</div>
                     </div> 
                     <div class="photoset">       
-                        <img src="images/furry.png" alt="Edgy furry being edgy a f">
+                        <img id="photo3" src="images/furry.png" alt="Edgy furry being edgy a f">
                             <div class="caption">other edge lords from all walks of life will appear before you</div>
                     </div>
                     <div class="photoset">        
-                        <img src="images/swordedge.png" alt="Weeaboo with anime pillow and blade">
+                        <img id="photo4" src="images/swordedge.png" alt="Weeaboo with anime pillow and blade">
                             <div class="caption">only the edgiest of edge lords use and study the blade</div>    
                     </div>    
                 </div>
