finished css html and added tweaking

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="secondarytext"> Behold, as I show you how edgy one human being can be. 
                     Sign up now for the edgiest content on the internet. </div>
                 </div>    
-                <button class="sign-up">Sign up</button>
+                <button class="sign-up1">Sign up</button>
             </div>    
             <img id="placeholder" src="images/skull.jpg" alt="Left facing skull"></div>
         </div>
@@ -53,11 +53,14 @@
                 <div class="author">-Anon, of the 4chan realm</div>
         </div>
         <div class="bottom-section">
-            <div class="persuade">It's time to join the Edge Lords</div>
-            <div class="hook">Sign up for the Land of Edge by clicking this button. Right now. Do it.</div>
-            <button class="Sign up">Sign up</button>
+            <div class="container">
+                <div class="words">
+                    <div class="persuade">It's time to join the Edge Lords!</div>
+                    <div class="hook">Sign up for the Land of Edge by clicking this button. Right now. Do it.</div>
+                </div>
+                <button class="sign-up">Sign up</button>
+            </div>            
         </div>
-
-        <div class="footer"></div>
+        <div class="footer">Copyright © The Odin Project 2021</div>
     </body>
 </html>
