--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="header">
             <div class="logo"><img src="images/edge-lord-crop.png" alt="Edgy Logo"></div>
               <div class="links">  
-                <a href="https://www.pornhub.com">Header Link One</a>
-                <a href="https://www.xhamster.com">Header Link Two</a>
-                <a href="https://www.motherless.com">Header Link Three</a>
+                <a href=>Header Link One</a>
+                <a href=>Header Link Two</a>
+                <a href=>Header Link Three</a>
               </div>  
         </div>
         <div class="top">
